# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/Cameras/: Pinhole.cpp
src/Events/: Events.cpp  Events.h
src/GeometricObjects/: GeometricObject.cpp  GeometricObject.h  Plane.cpp  Plane.h  sphere.cpp  sphere.h
src/Tracers/: MultipleObjects.cpp  MultipleObjects.h  SingleSphere.cpp  SingleSphere.h  tracer.cpp  tracer.h
src/UserInterface/: RenderApp.cpp  RenderApp.h  RenderCanvas.cpp  RenderCanvas.h  RenderFrame.cpp  RenderFrame.h  RenderPixel.cpp  RenderPixel.h  RenderThread.cpp  RenderThread.h  wxraytracer.cpp  wxraytracer.h
src/Utilities/: Point3D.cpp  ShadeRec.cpp  ShadeRec.h
src/World/: ViewPlane.h  World.cpp  World.h
src/core/: ray.cpp  ray.h
src/geometry/: geometric_object.h
src/tests/: Test.h
src/ui/: wxraytracer.cpp  wxraytracer.h
src/util/: constants.h  point3.h  point3D.h  ray.cpp  ray.h  rgb_color.cpp  rgb_color.h  shade_rec.cpp  shade_rec.h  vec3x1.h  vector3D.cpp  vector3D.h
